mdapiunpkg/objects/Effect__c.object
<CustomObject>
    <fields>
        <fullName>Effect_Details__c</fullName>
        <description>What is the game mechanic of the effect (ie. 1d6 damage every turn. Lasts 5 turns).</description>
        <label>Effect Details</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Background_Color__c</fullName>
        <label>Icon Background Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>gm-icon-red</fullName>
                </value>
                <value>
                    <fullName>gm-icon-orange</fullName>
                </value>
                <value>
                    <fullName>gm-icon-yellow</fullName>
                </value>
                <value>
                    <fullName>gm-icon-green</fullName>
                </value>
                <value>
                    <fullName>gm-icon-blue</fullName>
                </value>
                <value>
                    <fullName>gm-icon-purple</fullName>
                </value>
                <value>
                    <fullName>gm-icon-brown</fullName>
                </value>
                <value>
                    <fullName>gm-icon-grey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Icon to represent the effect</description>
        <label>Icon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fa-circle</fullName>
                </value>
                <value>
                    <fullName>fa-fire</fullName>
                </value>
                <value>
                    <fullName>fa-leaf</fullName>
                </value>
                <value>
                    <fullName>fa-eye</fullName>
                </value>
                <value>
                    <fullName>fa-heart</fullName>
                </value>
                <value>
                    <fullName>fa-flash</fullName>
                </value>
                <value>
                    <fullName>fa-map-marker</fullName>
                </value>
                <value>
                    <fullName>fa-caret-down</fullName>
                </value>
                <value>
                    <fullName>fa-caret-up</fullName>
                </value>
                <value>
                    <fullName>fa-asterisk</fullName>
                </value>
                <value>
                    <fullName>fa-tint</fullName>
                </value>
                <value>
                    <fullName>fa-minus-circle</fullName>
                </value>
                <value>
                    <fullName>fa-hourglass</fullName>
                </value>
                <value>
                    <fullName>fa-plus</fullName>
                </value>
                <value>
                    <fullName>fa-shield</fullName>
                </value>
                <value>
                    <fullName>fa-stop-circle</fullName>
                </value>
                <value>
                    <fullName>fa-times-circle</fullName>
                </value>
                <value>
                    <fullName>fa-question-circle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ruleset__c</fullName>
        <label>Ruleset</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ruleset</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Save__c</fullName>
        <description>Describe the save for this effect (ie, Dex save DC 12).</description>
        <label>Save</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Effect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Effect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>